--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                     <label for="Days">Seconds</label>
                 </div>
             </div>
+            <div class="gift-para"><strong>Pawan Sharma give a gift to you. click on button to open the gift. </strong></div>
+            <div><button class="gift">Click Here!</button></div>
         </div>
-
     </div>
 
     <script src="index.js"></script>
